tests/ivg/invalid/gradient_stops_odd_count.ivg
format IVG-3
// gradient stops with odd element count
fill gradient:[linear 0,0,1,0 stops:[0,#000,#fff]]
